# Arcranion

./: CMakeLists.txt  manage.ps1
libraries/: glfw3.lib
main/: CMakeLists.txt
main/src/arcranion/application/: description.h
main/src/arcranion/globals/: engine.cpp  engine.h  graphics.cpp  graphics.h
main/src/arcranion/graphics/: glfw.cpp  glfw.h
main/src/arcranion/graphics/vulkan/: command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  debugging.cpp  debugging.h  framebuffer.cpp  framebuffer.h  instance.cpp  instance.h  pipeline.cpp  pipeline.h  render_pass.cpp  render_pass.h  surface.cpp  surface.h
main/src/arcranion/graphics/vulkan/device/: logical.cpp  logical.h  physical.cpp  physical.h  queue_family.cpp  queue_family.h  swap_chain.cpp  swap_chain.h
main/src/arcranion/graphics/vulkan/shader/: shader_module.cpp  shader_module.h  shader_type.h
main/src/arcranion/internal/: include_global.h  type_aliases.h
main/src/arcranion/util/: file.h  size.h  version.cpp  version.h
main/src/arcranion/window/: monitor.cpp  monitor.h  window.cpp  window.h
scripts/: analyze_decl.py  generate_predecl.py  shader.py
scripts/decls/: analyze_decl.py  generate_predecl.py
test/: CMakeLists.txt
test/src/: basic_application.cpp
